# esp-weather-station-epaper

./: EPD_drive.cpp  EPD_drive.h  EPD_drive_gpio.cpp  EPD_drive_gpio.h  LICENSE  README.md  TimeClient.cpp  TimeClient.h  WeatherStation-epaper.ino  bitmaps.h  esp-weather-station-epaper-openweathermap.ino  heweather.cpp  heweather.h  heweatherparser.cpp  heweatherparser.h  lang.h  settings.h  strings.h  weatherdata.h
Tutourial/zh/: README.md
server/: App.toml  Cargo.toml
server/src/: config.rs  heweather.rs  lib.rs  main.rs  weather.rs
waveshare/: EPD_drive.cpp  EPD_drive.h  EPD_drive_gpio.cpp  EPD_drive_gpio.h
