[package]
name = "eink-weather-server"
version = "0.0.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
figment = { version = "0.10", features = ["env", "toml", "json"] }
serde_json = "1"
chrono = "^0.4"
lazy_static = "1.4"
log = "0.4"
reqwest = { version = "0.12", features = ["gzip"] }
dashmap = "5"
derive-getters = "0.3"

[profile.release]
lto = true
strip = "debuginfo"